[gd_scene load_steps=3 format=3 uid="uid://5t08hntggvf1"]

[ext_resource type="Script" path="res://src/scripts/encounter.gd" id="1_1a65w"]
[ext_resource type="PackedScene" uid="uid://fauei1kt6xix" path="res://src/ui.tscn" id="1_8tx74"]

[node name="Encounter" type="Node2D"]
script = ExtResource("1_1a65w")

[node name="UI" parent="." instance=ExtResource("1_8tx74")]

[node name="EncounterUI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="EncounterUI"]
offset_left = 86.0
offset_top = 81.0
offset_right = 550.0
offset_bottom = 121.0

[node name="MainText" type="RichTextLabel" parent="EncounterUI/VBoxContainer"]
layout_mode = 2
fit_content = true
scroll_active = false
visible_characters_behavior = 1

[node name="Options" type="VBoxContainer" parent="EncounterUI/VBoxContainer"]
layout_mode = 2

[node name="Outcomes" type="VBoxContainer" parent="EncounterUI/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="EncounterUI/VBoxContainer/Outcomes"]
layout_mode = 2
text = "Outcomes:"

[node name="Continue" type="Button" parent="EncounterUI/VBoxContainer"]
visible = false
layout_mode = 2
text = "Continue"

[connection signal="pressed" from="EncounterUI/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
